--- a/webapp/public/stylesheets/formtastic_changes.css
+++ b/webapp/public/stylesheets/formtastic_changes.css
@@ -1,6 +1,6 @@
 
 form.formtastic fieldset.inputs p.inline-hints {
-   font-size : 12px ; 
+   font-size : 13px ; 
    font-family : Helvetica ;
    text-align : justify ;
    float : left ; 
@@ -18,3 +18,8 @@ form.formtastic fieldset.inputs label.label {
   border : 2px solid black ;
   padding : 15px ;
 }
+
+fieldset.inputs textarea, input[type="text"] {
+  font-family : Helvetica Arial ;
+  font-size : 13px ;
+} 
