Changed <id> of containing <div>

--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -1,5 +1,5 @@
 
-%div#benchmark_grade_pane.narrow.pane
+%div#benchmark_edit_pane.narrow.pane
   = semantic_form_for @admin, :url => "/admin/grade_description" do |f| 
     .accordion-form 
       - @benchmarks.each do |bmark| 
