--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -21,3 +21,12 @@
 	font-size : 13px ;
 } 
 
+.submit-buttons { 
+   margin-top : 7px ;
+   margin-left : 40% ;
+} 
+
+.hidden { 
+	display : none ;
+} 
+
