Minor indentation changes

--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -1,6 +1,6 @@
 
 %div#benchmark_edit_pane.narrow.pane
-  = semantic_form_for @admin, :url => "/admin/grade_description" do |f| 
+  = semantic_form_for @admin, :url => "/grade_description" do |f| 
     .accordion-form 
       - @benchmarks.each do |bmark| 
         .accordion-heading
@@ -14,13 +14,19 @@
                           :wrapper_html => {:id => "edit_benchmark_annotation_#{bmark.id}"}
               = g.input :description, :as => :text,
                         :input_html => { :rows => 6, 
-                                         :name => "benchmarks[#{bmark.id}][description]",
-                                         :id => "input_benchmark_desc_#{bmark.id}"},
+                          :name => "benchmarks[#{bmark.id}][description]",
+                          :id => "input_benchmark_desc_#{bmark.id}"},
                         :wrapper_html => {:id => "edit_benchmark_desc_#{bmark.id}"}
               = g.input :default_allotment, :as => :select, 
                         :collection => 0.step(101, 10).to_a, 
                         :include_blank => false, 
                         :input_html => { :name => "benchmarks[#{bmark.id}][default_allotment]",
-                            :id => "input_benchmark_defaults_#{bmark.id}"}
-    = f.buttons do 
-      = f.commit_button :button_html => {:value => 'Update Benchmarks'}
+                          :id => "input_benchmark_defaults_#{bmark.id}"}
+    .submit-buttons
+      %input.update{:type => :submit, :role => :button, 
+                    :value => "Update", :name => "commit"}
+      %input{ :type => :button, :role => :button, 
+                       :value => "Define New"} 
+
+#admin-forms.hidden
+  = render :partial => 'grade_descriptions/new'
