--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -15,18 +15,20 @@
               = g.input :description, :as => :text,
                         :input_html => { :rows => 6, 
                           :name => "benchmarks[#{bmark.id}][description]",
-                          :id => "input_benchmark_desc_#{bmark.id}"},
+                          :id => "input_benchmark_desc_#{bmark.id}",
+                          :class => "full-width"},
                         :wrapper_html => {:id => "edit_benchmark_desc_#{bmark.id}"}
               = g.input :default_allotment, :as => :select, 
                         :collection => 0.step(101, 10).to_a, 
                         :include_blank => false, 
-                        :input_html => { :name => "benchmarks[#{bmark.id}][default_allotment]",
+                        :input_html => { :class => "full-width",
+                          :name => "benchmarks[#{bmark.id}][default_allotment]",
                           :id => "input_benchmark_defaults_#{bmark.id}"}
     .submit-buttons
       %input.update{:type => :submit, :role => :button, 
                     :value => "Update", :name => "commit"}
-      %input{ :type => :button, :role => :button, 
-                       :value => "Define New"} 
+      %input#new-benchmark-button{ :type => :button, 
+                                   :role => :button, :value => "Define New"} 
 
 #admin-forms.hidden
   = render :partial => 'grade_descriptions/new'
