Modifications made for first bit of AJAX...
The accordion in Admin console now submits data remotely (:remote => true).
Also, all accordion selectors closed just before submitting an AJAX request.

Placeholder file for capturing all shared bindings across .js code also added

--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -1,6 +1,6 @@
 
-%div#benchmark_edit_pane.narrow.pane
-  = semantic_form_for @admin, :url => "/grade_description" do |f| 
+%div#benchmark_edit_pane.narrow.pane.as-accordion
+  = semantic_form_for @admin, :url => "/grade_description", :remote => true do |f| 
     .accordion-form 
       - @benchmarks.each do |bmark| 
         .accordion-heading
@@ -32,3 +32,6 @@
 
 #admin-forms.hidden
   = render :partial => 'grade_descriptions/new'
+
+#misc-stuff.hidden
+  = render :partial => 'shared/ajax_responses'
