--- a/webapp/app/views/grade_descriptions/_new.html.haml
+++ b/webapp/app/views/grade_descriptions/_new.html.haml
@@ -1,6 +1,6 @@
 
-#new-grade-description.new-entity
-  = semantic_form_for :grade_description do |f| 
+#new-grade-description.new-entity.close-on-submit
+  = semantic_form_for :grade_description, :remote => true, :url => benchmark_path do |f| 
     = f.inputs do 
       = f.input :annotation
       = f.input :description, :as => :text, 
@@ -9,4 +9,4 @@
                 :collection => 0.step(101,10).to_a, :include_blank => false
 
     .submit-buttons
-      %input{:type => :submit, :role => :button, :value => "Update", :name => "commit"}
+      %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
