--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -1,34 +1,14 @@
 
-%div#benchmark_edit_pane.narrow.pane.as-accordion
-  = semantic_form_for @admin, :url => "/grade_description", :remote => true do |f| 
-    .accordion-form 
-      - @benchmarks.each do |bmark| 
-        .accordion-heading
-          %a.small-font{:href => "#"}= "#{bmark.annotation}"
-        .accordion-content
-          = f.semantic_fields_for bmark do |g| 
-            = g.inputs do 
-              = g.input :annotation, 
-                        :input_html => {:name => "benchmarks[#{bmark.id}][annotation]",
-                          :id => "input_benchmark_annotation_#{bmark.id}"},
-                          :wrapper_html => {:id => "edit_benchmark_annotation_#{bmark.id}"}
-              = g.input :description, :as => :text,
-                        :input_html => { :rows => 6, 
-                          :name => "benchmarks[#{bmark.id}][description]",
-                          :id => "input_benchmark_desc_#{bmark.id}",
-                          :class => "full-width"},
-                        :wrapper_html => {:id => "edit_benchmark_desc_#{bmark.id}"}
-              = g.input :default_allotment, :as => :select, 
-                        :collection => 0.step(101, 10).to_a, 
-                        :include_blank => false, 
-                        :input_html => { :class => "full-width",
-                          :name => "benchmarks[#{bmark.id}][default_allotment]",
-                          :id => "input_benchmark_defaults_#{bmark.id}"}
-    .submit-buttons
-      %input.update{:type => :submit, :role => :button, 
-                    :value => "Update", :name => "commit"}
-      %input#new-benchmark-button{ :type => :button, 
-                                   :role => :button, :value => "Define New"} 
+.visible-stuff 
+  #grade-descriptions.narrow.pane 
+    = semantic_form_for @admin, :url => "/grade_description", :remote => true do |f|
+      .form.accordion 
+        = render :partial => 'grade_descriptions/list', :locals => {:form => f, :list => @benchmarks}
+        .submit-buttons
+          %input.update{:type => :submit, :role => :button, 
+                        :value => "Update", :name => "commit"}
+          %input#new-benchmark-button{ :type => :button, 
+                                       :role => :button, :value => "Define New"} 
 
 #admin-forms.hidden
   = render :partial => 'grade_descriptions/new'
