New partial for rendering a single grade-description edit form..
The new partial would be needed to add a newly created grade description
- using JS - to the accordion in Admin console

--- a/webapp/app/views/grade_descriptions/_list.html.haml
+++ b/webapp/app/views/grade_descriptions/_list.html.haml
@@ -1,24 +1,4 @@
 
-- list.each do |gdesc| 
-  .heading.accordion
-    %a.small-font{:href => "#"}= "#{gdesc.annotation}"
-  .content.accordion
-    = form.semantic_fields_for gdesc do |g|
-      = g.inputs do 
-        = g.input :annotation, 
-          :input_html => {:name => "benchmarks[#{gdesc.id}][annotation]",
-          :id => "input_benchmark_annotation_#{gdesc.id}"},
-          :wrapper_html => {:id => "edit_benchmark_annotation_#{gdesc.id}"}
-        = g.input :description, :as => :text,
-          :input_html => { :rows => 6, 
-          :name => "benchmarks[#{gdesc.id}][description]",
-          :id => "input_benchmark_desc_#{gdesc.id}",
-          :class => "full-width"},
-          :wrapper_html => {:id => "edit_benchmark_desc_#{gdesc.id}"}
-        = g.input :default_allotment, :as => :select, 
-          :collection => 0.step(101, 10).to_a, 
-          :include_blank => false, 
-          :input_html => { :class => "full-width",
-          :name => "benchmarks[#{gdesc.id}][default_allotment]",
-          :id => "input_benchmark_defaults_#{gdesc.id}"}
-
+- list.each do |grade| 
+  = render :partial => 'grade_descriptions/single', 
+           :locals => {:form => form, :grade => grade}
