Created an ID handle for the accordion

--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -2,7 +2,7 @@
 .visible-stuff 
   #grade-descriptions.narrow.pane 
     = semantic_form_for @admin, :url => "/grade_description", :remote => true do |f|
-      .form.accordion 
+      #grade-description-accordion.form.accordion 
         = render :partial => 'grade_descriptions/list', :locals => {:form => f, :list => @benchmarks}
         .submit-buttons
           %input.update{:type => :submit, :role => :button, 
