--- a/webapp/app/views/grade_descriptions/_single.html.haml
+++ b/webapp/app/views/grade_descriptions/_single.html.haml
@@ -17,7 +17,6 @@
       = g.input :default_allotment, :as => :select, 
         :collection => 0.step(101, 10).to_a, 
         :include_blank => false, 
-        :input_html => { :class => "full-width",
-        :name => "benchmarks[#{grade.id}][default_allotment]",
+        :input_html => { :name => "benchmarks[#{grade.id}][default_allotment]",
         :id => "input_benchmark_defaults_#{grade.id}"}
 
