Provided for new boolean fields - mcq and subpart - in GradeDescription forms...

--- a/webapp/app/assets/stylesheets/formtastic_changes.css
+++ b/webapp/app/assets/stylesheets/formtastic_changes.css
@@ -35,3 +35,9 @@ fieldset.inputs select {
 fieldset.buttons { 
    margin-top : 10px ;
 } 
+
+.formtastic fieldset.boolean-flags li {
+    padding : 0px ; 
+    float : left ;
+    font-variant : small-caps ;
+} 
