--- a/webapp/app/views/grade_descriptions/_new.html.haml
+++ b/webapp/app/views/grade_descriptions/_new.html.haml
@@ -1,12 +1,16 @@
 
+- new_grade_description = GradeDescription.new 
 #new-grade-description.new-entity.close-on-submit
-  = semantic_form_for :grade_description, :remote => true, :url => benchmark_path do |f| 
+  = semantic_form_for new_grade_description, :remote => true, :url => benchmark_path do |f| 
     = f.inputs do 
       = f.input :annotation
       = f.input :description, :as => :text, 
                 :input_html => {:rows => 7, :class => "full-width"}
       = f.input :default_allotment, :as => :select, 
                 :collection => 0.step(101,10).to_a, :include_blank => false
+    = f.inputs :class => "boolean-flags" do 
+      = f.input :mcq, :label => "mcq?"
+      = f.input :subpart, :label => "sub-part?"
 
     .submit-buttons
       %input{:type => :submit, :role => :button, :value => "Create", :name => "commit"}
