[major] : Renamed GradeDescription to Yardstick
Associated changes made everywhere else - in controller, views etc.

Why the change ? Two reasons :
  1. I was making errors / getting confused between GradeDescription & Grade
     when seeing the code. Therefore, needed names that were very different
  2. I hate typing underscore. The underscore has to be the most useless character
     on the keyboard. It requires 2 key-presses to generate and unlike other
	 characters that also require the same - like $, &, | or @ - it has no real
	 meaning in any programming language. Enuff said...

--- a/webapp/app/views/yardsticks/_list.html.haml
+++ b/webapp/app/views/yardsticks/_list.html.haml
@@ -1,4 +1,4 @@
 
 - list.each do |grade| 
-  = render :partial => 'grade_descriptions/single', 
+  = render :partial => 'yardsticks/single', 
            :locals => {:form => form, :grade => grade}
