--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -1,17 +1,17 @@
 
 .visible-stuff 
-  #grade-descriptions.narrow.pane 
+  #yardsticks.narrow.pane 
     = semantic_form_for @admin, :url => "/grade_description", :remote => true do |f|
-      #grade-description-accordion.form.accordion 
-        = render :partial => 'grade_descriptions/list', :locals => {:form => f, :list => @benchmarks}
+      #yardstick-accordion.form.accordion 
+        = render :partial => 'yardsticks/list', :locals => {:form => f, :list => @yardsticks}
         .submit-buttons
           %input.update{:type => :submit, :role => :button, 
                         :value => "Update", :name => "commit"}
-          %input#new-benchmark-button{ :type => :button, 
+          %input#new-yardstick-button{ :type => :button, 
                                        :role => :button, :value => "Define New"} 
 
 #admin-forms.hidden
-  = render :partial => 'grade_descriptions/new'
+  = render :partial => 'yardsticks/new'
 
 #misc-stuff.hidden
   = render :partial => 'shared/ajax_responses'
