--- a/webapp/app/views/teachers/_marking_scheme_pane.html.haml
+++ b/webapp/app/views/teachers/_marking_scheme_pane.html.haml
@@ -9,6 +9,6 @@
           :as => :select, :collection => 0.step(101, 10).to_a, 
           :include_blank => false,
           :wrapper_html => {:id => "grade_curve_#{grade.id}"}, 
-          :label => "#{grade.grade_description.annotation}",
-          :hint => "#{grade.grade_description.description}"
+          :label => "#{grade.yardstick.annotation}",
+          :hint => "#{grade.yardstick.description}"
     = f.buttons
