--- a/webapp/app/views/teachers/show.html.haml
+++ b/webapp/app/views/teachers/show.html.haml
@@ -1,4 +1,9 @@
-%h1 Teachers#show 
-%p= "#{@teacher.first_name} #{@teacher.last_name} (#{@teacher.account.email})"
+-#
+ %h1 Teachers#show 
+ %p= "#{@teacher.first_name} #{@teacher.last_name} (#{@teacher.account.email})"
 -#= render :partial => 'shared/account_pane', :locals => {:me => @teacher, :account => @teacher.account}
-= render :partial => 'marking_scheme_pane', :locals => {:me => @teacher}
+ = render :partial => 'marking_scheme_pane', :locals => {:me => @teacher}
+
+.visible-stuff 
+  #grades.narrow.pane 
+
