Changed :url in form to send request to '/yardstick'..
.. instead of to '/grade_description' - which does not exist now

--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -1,7 +1,7 @@
 
 .visible-stuff 
   #yardsticks.narrow.pane 
-    = semantic_form_for @admin, :url => "/grade_description", :remote => true do |f|
+    = semantic_form_for @admin, :url => "/yardstick", :remote => true do |f|
       #yardstick-accordion.form.accordion 
         = render :partial => 'yardsticks/list', :locals => {:form => f, :list => @yardsticks}
         .submit-buttons
