Teachers can now edit their marking scheme...
In other words, they can change the allotment for the various grades.
They cannot, however, change the annotation nor the description of the
grade's parent yardstick

The same accordion - as in Admin console - is used. However, as mentioned
above, the only editable field is 'allotment'. Rest all is text

--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -1,14 +1,14 @@
 .accordion-heading { 
-	font-size : 14px ;
-	font-variant : small-caps ; 
-	font-family : Helvetica "Trebuchet MS" Arial ;
+    font-size : 14px ;
+    font-variant : small-caps ; 
+    font-family : Helvetica "Trebuchet MS" Arial ;
 } 
 
 .accordion-textbox { 
-	border : none ; 
-	font-family : Arial Helvetica ;
-	font-size : 9px ;
-	background-color : inherit ;
+    border : none ; 
+    font-family : Arial Helvetica ;
+    font-size : 9px ;
+    background-color : inherit ;
 } 
 
 .narrow.pane { 
@@ -18,11 +18,15 @@
 }
 
 .heading.accordion, .content.accordion { 
-	font-size : 14px ;
+    font-size : 14px ;
+} 
+
+p {
+    text-justify : justify;
 } 
 
 .ui-accordion .ui-accordion-header a.small-font {
-	font-size : 13px ;
+    font-size : 13px ;
 } 
 
 .submit-buttons { 
@@ -31,7 +35,7 @@
 } 
 
 .hidden { 
-	display : none ;
+    display : none ;
 } 
 
 .full-width, .formtastic .text textarea.full-width { 
