--- a/webapp/app/views/layouts/teachers.html.haml
+++ b/webapp/app/views/layouts/teachers.html.haml
@@ -3,7 +3,8 @@
 %html{html_attrs}
   %head 
     %title Teacher's Console
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag "application"
+    = javascript_include_tag "application"
     -# = javascript_include_tag :defaults
     = csrf_meta_tag
   
