Added a generic font-family clause..
If nothing else, default to some sans-serif font... Never a serif..
Don't like it..

--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -55,7 +55,7 @@ p {
   margin-left : 55% ; 
   margin-right : 5% ;
   height : 100% ; 
-  font-family : "Trebuchet MS" Helvetica Arial ;
+  font-family : "Trebuchet MS" Helvetica Arial sans-serif;
   /* border : 2px solid white ; */
 } 
 
