[yardsticks] Changed 'grade' to 'yardstick' in partials to remove confusion..
'grade' was a hangover from when 'Yardstick' was called 'GradeDescription'.
Now, it was just causing confusion..

--- a/webapp/app/views/yardsticks/_list.html.haml
+++ b/webapp/app/views/yardsticks/_list.html.haml
@@ -1,4 +1,4 @@
 
-- list.each do |grade| 
+- list.each do |yardstick| 
   = render :partial => 'yardsticks/single', 
-           :locals => {:form => form, :grade => grade}
+           :locals => {:form => form, :yardstick => yardstick}
