--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -52,7 +52,7 @@ p {
 } 
 
 #links-panel {
-  margin-left : 55% ; 
+  margin-left : 40% ; 
   margin-right : 5% ;
   height : 100% ; 
   font-family : "Trebuchet MS" Helvetica Arial sans-serif;
@@ -65,11 +65,15 @@ p {
   font-weight : bold ;
   font-size : 20px ;
   text-transform : lowercase ;
-  margin-left : 5px ;
+  margin-left : 20px ;
   /*vertical-align : middle ;
   border : 1px solid white ;*/
   line-height : 5 ;
   padding-bottom : 4px ;
+} 
+
+#links-panel a.first-element {
+  margin-left : 5px ;
 } 
 
 #links-panel a:hover {
