[Admin] : Added support for adding a school Board and - optionally - Courses..
Courses can also be added later - after the Board has been created.
However, courses *cannot* be created in isolation. They can only
be created when the parent Board is either being created or updated

Courses can, however, be edited in isolation

--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -12,6 +12,8 @@
 
 #admin-forms.hidden
   = render :partial => 'yardsticks/new'
+  = render :partial => 'boards/new'
 
 #misc-stuff.hidden
   = render :partial => 'shared/ajax_responses'
+  = render :partial => 'courses/new'
