--- a/webapp/app/views/boards/_new.html.haml
+++ b/webapp/app/views/boards/_new.html.haml
@@ -1,2 +1,15 @@
-%h1 Boards#new
-%p Find me in app/views/boards/new.html.haml
+
+- new_board = Board.new 
+
+#new-board-form.close-on-submit
+  = semantic_form_for :board, :url => board_path, :remote => true do |f| 
+    = f.inputs do 
+      = f.input :name 
+
+    %a#new-course-link.link-within-form{ :href => '#'}= "Add Course"
+    .appendable{ :next => 0 }
+      
+    .submit-buttons
+      %input{:type => :submit, :role => :button, :value => "Add", :name => "commit"}
+    
+
