Decoupled .narrow and .pane in .css
class="pane" & class="narrow" should have meaning on their own
so that they can be paired with other class=< sth > directives

--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -11,9 +11,12 @@
     background-color : inherit ;
 } 
 
-.narrow.pane { 
-  width : 400px ;
-  margin-left : 15px ;
+.pane { 
+  margin-left : 25px ; 
+  float : left ;
+} 
+
+.narrow { 
   max-width : 33% ;
 }
 
