--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -9,6 +9,10 @@
                         :value => "Update", :name => "commit"}
           %input#new-yardstick-button{ :type => :button, 
                                        :role => :button, :value => "Define New"} 
+  
+  -# Table of Boards and Courses therein
+  #school-boards.pane
+    = render :partial => 'boards/list'
 
 #admin-forms.hidden
   = render :partial => 'yardsticks/new'
