[admin] : Rendering list of courses for a board in a <table> ...
Yeah, I know.. People say one shouldn't use <table>. Screws up SEO,
is harder to maintain (don't buy this yet) etc. etc.

Well, SEO is not a concern for an internal console page. The only concern
is being able to display all the required data. If <table> gets us up and
running quickly, then why not use it?

Styling still needs to be improved

--- a/webapp/app/views/boards/_list.html.haml
+++ b/webapp/app/views/boards/_list.html.haml
@@ -10,3 +10,11 @@
         %label{ :for => "radio_#{board.id}" }= "#{board.name}"
 
   #courses-table.flushable.table.left
+    %table
+      %thead
+        %th= "Course" 
+        %th= "Subject" 
+        %th= "Grade" 
+        %th= "Active?" 
+
+      %tbody.table.content 
