[styling] : Employing JS to calculate width of .greedy elements..
First use in Admin console.. Any element with class attribute='greedy'
will expand to fill all available horizontal space in its parent (default)

However, if .greedy is paired with .vertical, then the element will expand
to fill all remaining vertical space in its parent (TBD)

--- a/webapp/app/views/admin/show.html.haml
+++ b/webapp/app/views/admin/show.html.haml
@@ -1,5 +1,5 @@
 
-.visible-stuff 
+.visible-stuff
   #yardsticks.narrow.pane 
     = semantic_form_for @admin, :url => "/yardstick", :remote => true do |f|
       #yardstick-accordion.form.accordion 
@@ -11,7 +11,7 @@
                                        :role => :button, :value => "Define New"} 
   
   -# Table of Boards and Courses therein
-  #school-boards.pane
+  #school-boards.pane.greedy
     = render :partial => 'boards/list'
 
 #admin-forms.hidden
