--- a/webapp/app/assets/stylesheets/tweaks.css
+++ b/webapp/app/assets/stylesheets/tweaks.css
@@ -1,6 +1,7 @@
 
 body {
   font-family : "Trebuchet MS", Helvetica, Arial, sans-serif ; 
+  width : 1120px ;
 } 
 
 .accordion-heading { 
@@ -49,12 +50,13 @@ p {
 } 
 
 #main-panel { 
-  width : 100% ; 
+  /* width : 100% ;  */
   height : 100px ;
   background-color : #654b24 ;
   -moz-border-radius : 10px ;
   border-radius : 10px ;
   margin-bottom : 25px ;
+  padding-left : 25px ;
 } 
 
 #links-panel {
@@ -88,16 +90,26 @@ p {
 } 
 
 .action-panel { 
-  /* background-color : #654b24 ;*/
+  background-color : #654b24 ;*/
   -moz-border-radius : 4px ;
   border-radius : 4px ;
   margin-bottom : 10px ;
 } 
 
 .horizontal { 
-  height : 30px ;
+  height : 60px ;
   min-width : 60px ;
 } 
+
+#school-boards { 
+  float : left ;
+} 
+
+/*
+#school-boards > .wide.pane { 
+  width : 100% ;
+} 
+*/
 
 .vertical { 
   min-height : 60px ;
@@ -121,22 +133,7 @@ p {
   color : #fd9105 ;
 } 
 
-/*
-.table { 
-  color : #654b24 ;
-/*
-  font-size : 14px ;
-  -moz-border-radius : 7px ; 
-  border-radius : 7px ;
-  border : 1px dotted #654b24 ; 
-  float : left ;
+.transparent { 
+  background-color : transparent ;
 } 
 
-.headings { 
-  font-weight : bold ;
-} 
-
-.table .row, .headings .title { 
-  float : left ;
-} 
-*/
