Incorporating a new attribute - marker - for input and link elements...
The plan is to have this attribute on all HTML elements the user can interact
with. Mostly, this means <input>, <a> and the like...

No assumptions are made for what value a marker should have. But the plan
is to give markers value that would either:
  1. help decide whether the containing element is the one we want, OR
  2. provide critical input for further action

I decided against using standard HTML attributes because as things stand now:
  1. class attributes are too non-specific and are anyways used exclusively
     for defining CSS styling
  2. id attributes are too mangled to be worked with easily - especially
     when generated by things like formtastic

--- a/webapp/app/views/courses/_new.html.haml
+++ b/webapp/app/views/courses/_new.html.haml
@@ -10,9 +10,10 @@
   = semantic_form_for :course do |f| 
     .extractable 
       = f.inputs do 
-        = f.input :name, :input_html => {:name => 'courses[*][name]'} 
+        = f.input :name, :input_html => {:name => 'courses[*][name]', :marker => "name"} 
         = f.input :grade, :as => :select, :collection => [*9..12], 
-                  :include_blank => false, :input_html => {:name => 'courses[*][grade]'}
+                  :include_blank => false, 
+                  :input_html => {:name => 'courses[*][grade]', :marker => "grade"}
         = f.input :subject_id, :label => 'subject', :include_blank => false,
                   :as => :select, :collection => name_id_mapping, 
-                  :input_html => {:name => 'courses[*][subject_id]'}
+                  :input_html => {:name => 'courses[*][subject_id]', :marker => "subject_id"}
