--- a/webapp/app/views/yardsticks/_single.html.haml
+++ b/webapp/app/views/yardsticks/_single.html.haml
@@ -6,26 +6,31 @@
     = g.inputs do 
       = g.input :annotation, 
         :input_html => {:name => "yardsticks[#{yardstick.id}][annotation]",
-        :id => "input_yardstick_annotation_#{yardstick.id}"},
+                        :id => "input_yardstick_annotation_#{yardstick.id}",
+                        :marker => "annotation"},
         :wrapper_html => {:id => "edit_yardstick_annotation_#{yardstick.id}"}
       = g.input :description, :as => :text,
         :input_html => { :rows => 6, 
-        :name => "yardsticks[#{yardstick.id}][description]",
-        :id => "input_yardstick_desc_#{yardstick.id}",
-        :class => "full-width"},
+                         :name => "yardsticks[#{yardstick.id}][description]",
+                         :id => "input_yardstick_desc_#{yardstick.id}",
+                         :class => "full-width",
+                         :marker => "description"},
         :wrapper_html => {:id => "edit_yardstick_desc_#{yardstick.id}"}
       = g.input :default_allotment, :as => :select, 
         :collection => 0.step(101, 10).to_a, 
         :include_blank => false, 
         :input_html => { :name => "yardsticks[#{yardstick.id}][default_allotment]",
-        :id => "input_yardstick_defaults_#{yardstick.id}"}
+                         :id => "input_yardstick_defaults_#{yardstick.id}",
+                         :marker => "default_allotment"}
     = g.inputs :class => "boolean-flags" do
       = g.input :mcq, 
                 :input_html => {:name => "yardsticks[#{yardstick.id}][mcq]", 
-                :id => "input_yardstick_mcq_#{yardstick.id}" }, 
+                                :id => "input_yardstick_mcq_#{yardstick.id}",
+                                :marker => "mcq"}, 
                 :label => "MCQ?"
       = g.input :subpart, 
                 :input_html => {:name => "yardsticks[#{yardstick.id}][subpart]",
-                :id => "input_yardstick_subpart_#{yardstick.id}" }, 
+                                :id => "input_yardstick_subpart_#{yardstick.id}",
+                                :marker => "subpart"}, 
                 :label => "Sub-Part?"
 
