Added login/logout links..

--- a/webapp/app/views/admin/_sidepanel.html.haml
+++ b/webapp/app/views/admin/_sidepanel.html.haml
@@ -1,6 +1,13 @@
 
-- links = { :board => { :sublinks => [[:add],[:view]], :href => '#'},
-            :topics => {:sublinks => [[:view]], :href => '#'} }
+
+- if current_account 
+  - links = {:logout => {:href => '/logout', :sublinks => []} }
+- else 
+  - links = {:login => {:href => '/login', :sublinks => []} }
+
+- otherlinks = { :board => { :sublinks => [[:add],[:view]], :href => '#'},
+                 :topics => {:sublinks => [[:view]], :href => '#'} }
+- links.merge! otherlinks 
 
 %ul
   - links.each do |k,v| 
