--- a/webapp/app/views/boards/_list.html.haml
+++ b/webapp/app/views/boards/_list.html.haml
@@ -1,7 +1,7 @@
 
 - boards = Board.all 
 
-.wide.pane.greedy
+#courses-console.slideable.greedy.left
   #top-panel.action-panel.horizontal
   #board-list.action-panel.vertical.left.transparent
     - boards.each do |board| 
